add some changes into UI 1.5

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,25 +4,26 @@
   "description": "InsightHire - Candidate Interview Monitoring Frontend",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.1",
+    "@mui/lab": "^5.0.0-alpha.136",
+    "@mui/material": "^5.14.1",
+    "axios": "^1.4.0",
+    "chart.js": "^4.3.3",
+    "dayjs": "^1.11.9",
+    "firebase": "^10.1.0",
+    "jspdf": "^3.0.2",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
-    "axios": "^1.4.0",
-    "socket.io-client": "^4.7.2",
-    "firebase": "^10.1.0",
-    "@mui/material": "^5.14.1",
-    "@mui/icons-material": "^5.14.1",
-    "@mui/lab": "^5.0.0-alpha.136",
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
+    "react-toastify": "^9.1.3",
     "react-webcam": "^7.1.1",
     "recharts": "^2.7.2",
-    "react-chartjs-2": "^5.2.0",
-    "chart.js": "^4.3.3",
-    "react-toastify": "^9.1.3",
-    "uuid": "^9.0.0",
-    "dayjs": "^1.11.9"
+    "socket.io-client": "^4.7.2",
+    "uuid": "^9.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
